Improve MCP code samples